# pilot-langchain-remotegraph

./: .env.sample  .gitignore  .gitmodules  CLAUDE.md  PLAN.md  README-ko.md  README.md  REPORT.md  langgraph.json  pyproject.toml  skills-lock.json
agents/autonomous_supervisor/: graph.py
agents/coder/: graph.py
agents/researcher/: graph.py
agents/reviewer/: graph.py
agents/subgraph_demo/: graph.py  inner_workflow.yaml  nodes.py  workflow.yaml
agents/supervisor/: graph.py
agents/workflows/: research_pipeline.yaml
docker/aegra/: Dockerfile  aegra.json  docker-compose.distributed.yml  docker-compose.yml
docker/agent-server/: Dockerfile  docker-compose.yml
docker/open-langgraph/: Dockerfile  docker-compose.yml  open_langgraph.json
docs/: experiments-en.md  experiments-ko.md
docs/experiments/raw/: en.json  ko.json
notebooks/: aegra.ipynb  autonomous_supervisor.ipynb  langgraph_platform.ipynb  open_langgraph_platform.ipynb  subgraph_verification.ipynb
scripts/: run_experiments.py  verify_agent_server.py
src/remotegraph/: __init__.py  agent.py  agent_server.py  cli.py  config.py  distributed.py  host.py  settings.py  workflow.py
src/remotegraph/backends/: __init__.py  aegra.py  base.py  langgraph_platform.py  open_langgraph.py
tests/: test_agent_server.py  test_backends.py  test_cli.py  test_distributed.py  test_smoke_remotegraph.py  test_subgraph_demo.py  test_supervisor.py  test_workflow.py
tests/fixtures/: workflow_nodes.py
